--- a/Köllumerland_en_Nijkruusland.mw
+++ b/Köllumerland_en_Nijkruusland.mw
@@ -18,7 +18,7 @@ netnummer = 0511, 0594 |
 postkode = 9291-9299, 9851-9853 |
 websteade = [http://www.kollumerland.nl www.kollumerland.nl] |
 }}
-'''Köllumerland en Nijkruusland''' is een van de 31 gemeentes van de [[Nederlaand|Nederlandse]] [[Frieslaand|provìnzie Friesland]]. t Is de enege Friese gemeente woar at [[Grunnings]] sproken wordt. t Haar op [[1 meie|1 mei]] [[2014]] 12.905 ienwoners en het as heufdplak [[Köllum]]. 
+'''Köllumerland en Nijkruusland''' is een vroggere gemeente van de [[Nederlaand|Nederlandse]] [[Frieslaand|provìnzie Friesland]]. t Is de enege Friese gemeente woar at [[Grunnings]] sproken wordt. t Haar op [[1 meie|1 mei]] [[2014]] 12.905 ienwoners en het as heufdplak [[Köllum]]. 
 
 == Dialekt ==
 Dizze gemeente is de enege Friese gemeente woar [[Grunnings]] proat wordt. t [[Köllumerlands]] wordt bie t [[Westerkertiers]] rekend, in tieds dat t [[Pompsters]] n apart dialekt is. Deurdat t noordoosteleke part van de gemeente ienpolderd is vanuut t oosten, het t dialekt doar meer mit t Grunnings as mit t Fries. 
@@ -58,9 +58,8 @@ Ien de tabel hieronder stoan de offisjele kernen aangeven, mit doarbie de Grunni
 |}
 
 {{dia|Schreven ien t [[Köllumerlands]]}}
-{{Frieslaand}}
 
 {{DEFAULTSORT:Kollumerland En Nijkruusland}}
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemiente in Frieslaand]]
+[[Kategorie:Vroggere gemiente in Frieslaand]]
 [[Kategorie:Grunnegs]]
