--- a/Geldermalsen.mw
+++ b/Geldermalsen.mw
@@ -18,7 +18,7 @@ netnummer = 0345 |
 postkode = 4150-4153, 4155-4158, 4190-4191, 4194, 4196-4197 |
 webstie = [http://www.geldermalsen.nl/ www.geldermalsen.nl] |
 }}
-'''Geldermalsen''' is n darp en ne [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se previnsie [[Gelderlaand]] en hef ne oppervlaakte van 101,67 km² (woarvan 1,97 km² water). Et gemeentehoes steet in et gelieknamige darp.
+'''Geldermalsen''' is n darp en ne vroggere [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se previnsie [[Gelderlaand]] en hef ne oppervlaakte van 101,67 km² (woarvan 1,97 km² water). Et gemeentehoes steet in et gelieknamige darp.
 
 == Darpen in de gemeente Geldermalsen ==
 [[Acquoy]], [[Beesd]], [[Buurmalsen]], [[Deil]], [[Enspiek]], Geldermalsen, [[Gellicum]], [[Meteren (Nederlaand)|Meteren]], [[Rhenoy]], [[Rumpt]] en [[Tricht]].
@@ -29,8 +29,6 @@ De gemeente is eleagen in et zuudwesteleke deel van de previnsie Gelderlaand, in
 == Geskiednis ==
 De gemeente Geldermalsen van noe is op 1 januari 1978 ontstoan deur samengoan van de veurmoalige gemeenten Beesd, Buurmalsen, Deil en Geldermalsen.
 
-{{Gelderlaand}}
-
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Gemeente in Gelderlaand]]
+[[Kategorie:Vroggere gemaente in Gelderlaand]]
 [[Kategorie:Plaotse in Gelderlaand]]
