--- a/Neerijnen.mw
+++ b/Neerijnen.mw
@@ -18,7 +18,7 @@ netnummer = 0344, 0345, 0418 |
 postkode = 4060-4061, 4063-4064, 4174-4176, 4180-4182, 4184-4185 |
 webstie = [http://www.neerijnen.nl/ www.neerijnen.nl] |
 }}
-'''Neerijnen''' is n [[darp]] en ne [[gemiente (bestuur)|gemeente]] in de Nederlandse provinsie [[Gelderlaand]] en hef ne oppervlakte van 73,01 km².
+'''Neerijnen''' is n [[darp]] en ne vroggere [[gemiente (bestuur)|gemeente]] in de Nederlandse provinsie [[Gelderlaand]] en hef ne oppervlakte van 73,01 km².
 
 t Oosten van de gemeente (Neerijnen, Varik, Ophemert, Est, Opijnen, Heesselt) is onderdeel van de [[Tielerweerd]] . t Westen van de gemeente (Tuil, Haaften, Hellouw) ligt in t gebeed de Viefherenlaanden. t Gemeentehoes steet in t geliek-eneumde darp Neerijnen.
 
@@ -36,8 +36,6 @@ De gemeente is ontstaon op 1 januari [[1978]] en is n samengaon van de veurmaoli
 *[[Varik]] 
 *[[Waardenburg]]
 
-{{Gelderlaand}}
-
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Gemeente in Gelderlaand]]
+[[Kategorie:Vroggere gemaente in Gelderlaand]]
 [[Kategorie:Plaotse in Gelderlaand]]
