--- a/Beem.mw
+++ b/Beem.mw
@@ -19,7 +19,7 @@
 | websteade = [http://www.bedum.nl www.bedum.nl]
 }}
 
-'''Beem''' ([[Nederlaands]]: ''Bedum'') is n dörp en n [[gemainte]] in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Het sunt 1 jannewoari 2006 10.677 inwoners. 
+'''Beem''' ([[Nederlaands]]: ''Bedum'') is n dörp en n vrougere [[gemainte]] in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Het sunt 1 jannewoari 2006 10.677 inwoners. 
 
 == Beem (dörp) ==
 Beem is n dörp en ligt aan noordkaant van [[Grunnen (stad)|Stad]], dat ook t heufdstee van gemainte Beem is. t Stait bekènd om de olle kèrk. 
@@ -49,7 +49,5 @@ De gemainte Beem bestait oet volgende ploatsen:
 * [http://www.bedum.nl Webstee gemainte]
 * [http://www.drjdv.nl/images/kaart.gif Koart van Beem]
 
-{{GemaintesGrunnen}}
-
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
