--- a/De_Marne.mw
+++ b/De_Marne.mw
@@ -18,7 +18,7 @@
 | postkode = 9960-9978 |
 | websteade = [http://www.demarne.nl www.demarne.nl] |
 }}
-'''De Marne''' is n gemainte in t noorden van de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte beslagt n oppervlakte van 167,45 km².
+'''De Marne''' is n vrougere gemainte in t noorden van de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte beslagt n oppervlakte van 167,45 km².
 
 Partnerstad van De Marne is de [[Duutslaand|Duutse]] stad [[Dötlingen]] en de gemainte ligt in t COROP-gebied Overig Grunnen. De CBS-kode van De Marne is 1663.
 
@@ -31,7 +31,5 @@ De gemainte De Marne bevat de volgende ploatsen en gehuchten: [[Brouk (Marne)|Br
 == Zainsweerdegheden ==
 In de gemainte De Marne kin men genieten van de natuur van [[t Hoogelaand]] mit wierden en aandere traditionele dörpkes. Maisttied mit [[Middeleeuwn|Middelaiwse]] kèrke en örgel. Ook de [[Zeehondencrèche Paiterboeren]] en [[Nationaal park|Nationoal paark]] [[Laauwersmeer]] binnen in trek bie toeristen.
 
-{{GemaintesGrunnen}}
-
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
