--- a/Emsmond.mw
+++ b/Emsmond.mw
@@ -19,7 +19,7 @@
 | websteade = [http://www.eemsmond.nl www.eemsmond.nl]
 }}
 
-'''Emsmond''' is n gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Is in 1990 ontstoan deur [[fusie|verainen]] van de gemaintes [[Hefshoezen]], [[Kannes]], [[Oskert]] en [[Waarvum]]. t Ligt aan de Waddenzee en aan de monden van de [[Ems (revier)|Eems]], vandoar de noam ''Eemsmond''. t Woapen en de vlage verwiezen noar dizze reloatsie tuzzen de zee en de gemainte. De haile Grunneger Waddenzee heurt bie dizze gemainte. Doarbie heuren ook de [[waddenailaand|waddenailaandkes]] [[Röttemeroog]] en [[Röttemerploat]].
+'''Emsmond''' is n vrougere gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Is in 1990 ontstoan deur [[fusie|verainen]] van de gemaintes [[Hefshoezen]], [[Kannes]], [[Oskert]] en [[Waarvum]]. t Ligt aan de Waddenzee en aan de monden van de [[Ems (revier)|Eems]], vandoar de noam ''Eemsmond''. t Woapen en de vlage verwiezen noar dizze reloatsie tuzzen de zee en de gemainte. De haile Grunneger Waddenzee heurt bie dizze gemainte. Doarbie heuren ook de [[waddenailaand|waddenailaandkes]] [[Röttemeroog]] en [[Röttemerploat]].
 
 De gemainte komt gedailtelek overain mit t historische [[Oosterambt]]. 
 
@@ -31,7 +31,5 @@ De gemainte Emsmond bestait oet de volgende ploatsen: [[Eemshoaven]], [[Doodstil
 == Zainsweerdegheden ==
 Zainsweerdegheden in de gemainte Emsmond binnen de Grunneger [[Waddenzee]], [[wierde (toponiem)|wierden]], börgen woaronder de [[Menkemabörg]].
 
-{{GemaintesGrunnen}}
-
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
