--- a/Hoaren_(gemainte).mw
+++ b/Hoaren_(gemainte).mw
@@ -18,7 +18,7 @@ netnummer = 050 |
 postkode = 9479, 9750-9759 |
 websteade = [http://www.haren.nl www.haren.nl] |
 }}
-'''Hoaren''' ([[Nederlaands]]: ''Haren'') is n dörp en n [[gemiente (bestuur)|gemainte]] in Noord-[[Nederlaand]], in de [[pervincie|provìnzie]] [[Grunnen (provìnzie)|Grunnen]]. De gemainte beslagt n oppervlak van 50,70 [[vierkaante kilometer|km²]] (woarvan 4,10 km² [[woater]]). Hoaren ligt direkt ten zuden van [[Grunnen (stad)|t Stad]]. Veural deur de liggen is t n typische forinzengemainte. Hoaren wordt ook wel t Wassenaar van t noorden nuimd.
+'''Hoaren''' ([[Nederlaands]]: ''Haren'') is n dörp en n vrougere [[gemiente (bestuur)|gemainte]] in Noord-[[Nederlaand]], in de [[pervincie|provìnzie]] [[Grunnen (provìnzie)|Grunnen]]. De gemainte beslagt n oppervlak van 50,70 [[vierkaante kilometer|km²]] (woarvan 4,10 km² [[woater]]). Hoaren ligt direkt ten zuden van [[Grunnen (stad)|t Stad]]. Veural deur de liggen is t n typische forinzengemainte. Hoaren wordt ook wel t Wassenaar van t noorden nuimd.
 
 Schier legen is de [[Nederlaandse Hervormde Kerke|Hervörmde Kèrk]] oet de [[13e eeuw|13e aiw]], dij woarschainlek baauwd is op t stee woar oeit n haaidens hillegdom stoan het. Tussen Hoaren en Glimmen ligt [[Appèlbaargen]], veural veur [[Grunnen (stad)|stadjers]] n laifkoosde bestemmen. Bie [[Noordloaren]] ligt t ainege Nederlaandse [[hunebed]] boeten [[Drenthe|t Drìnt]].
 In Hoaren vindt men de grootste botoanische [[tune|toen]] van Nederlaand: de [[Hortus Haren]]. Op n oppervlak van sikkom 20 hektoare gruien en bluien [[plaanten|planten]] oet ale streken van Nederlaand en de rest van de wereld.
@@ -27,7 +27,6 @@ In Hoaren vindt men de grootste botoanische [[tune|toen]] van Nederlaand: de [[H
 De gemainte Hoaren omvat de volgende ploatsen en gehuchten: [[Essen (Hoaren)|Essen]], [[Glimmen]], Hoaren, [[Hoarenermeulen]], [[Noordloaren]], [[Onnen]], [[Eel-potterwold]] (gedailtelk).
 
 {{commonscat|Haren, Groningen}}
-{{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
