--- a/Leek_(Grunnen).mw
+++ b/Leek_(Grunnen).mw
@@ -1,4 +1,4 @@
-'''Leek''' (ook: ''Laik'' of ''De Lieke'') is n gemainte in t [[Westerkertaaier|Westerkwartier]], provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Komt ongeveer overain mit t olle gewest [[Vredewold]]. De heufdploats is Leek. Wieder bestait t oet de dörpen Zeuvenhuzen, Tolbert, Midwolle, Lettelbert, Oostwold en Enumatil (Aimentil).
+'''Leek''' (ook: ''Laik'' of ''De Lieke'') is n vrougere gemainte in t [[Westerkertaaier|Westerkwartier]], provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Komt ongeveer overain mit t olle gewest [[Vredewold]]. De heufdploats is Leek. Wieder bestait t oet de dörpen Zeuvenhuzen, Tolbert, Midwolle, Lettelbert, Oostwold en Enumatil (Aimentil).
 
 Leek stait veural bekend om de börg [[Nienoord]] bie de heufdploats. Dit is n olle börg dij oorspronkelk baauwd is deur de femilie [[Van Ewsum]] oet Middelstum, dij de "Nije Oert" (nieuwe oord, Nienoord) sticht het om in t gebied ten zuden van Laik te begunnen mit t groaven van [[Törf (braandstof)|törf]].
 
@@ -6,8 +6,7 @@ Op t landgoed Nienoord is in de börg t Nationaal Rijtuigmuseum vestegd. Wieder 
 
 Leek het n mooi overdekt winkelcentrum, De Liekeblom. De regionoale scholengemainschop De Borgen geft onderwies op VMBO, HAVO, VWO en Gymnasium-niveau.
 
-{{GemaintesGrunnen}}
 {{Begin|gos}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
