--- a/Moarum.mw
+++ b/Moarum.mw
@@ -1,4 +1,4 @@
-'''Moarum''' ([[Nederlaands]]: ''Marum'') is n loug en gemeente ien t [[Westerkertaaier|Westerkertier]], pervìnzie [[Grunnen (provìnzie)|Grunnen]]. t Heurde vrogger bie t gewest [[Vredewold]], soamen mit de gemeente [[Leek (gemainte)|De Lieke]].
+'''Moarum''' ([[Nederlaands]]: ''Marum'') is n loug en vrougere gemeente ien t [[Westerkertaaier|Westerkertier]], pervìnzie [[Grunnen (provìnzie)|Grunnen]]. t Heurde vrogger bie t gewest [[Vredewold]], soamen mit de gemeente [[Leek (gemainte)|De Lieke]].
 
 == Toal ==
 Ien de gemeente worden twai verschillende toalen proat. Ien t noordoosten wordt [[Grunnegs]] ([[Westerkertaaiers|Westerkertiers]]) proat en ien t zuudwesten wordt [[Westlaauwers Frais|Fries]] proat. Dit is t enege stee boeten de pervìnzie [[Frieslaand]] woar of t Westlaauwers Fries proat wordt. t Wordt bruukt ien de drijehoek Moarum (''Fries: Mearum''), [[De Wilp]] (''Fries: De Wylp'') en [[De Penne (Grönnen)|De Penne]] (''Fries: De Pein''). Ien De Wilp wordt liek wels Grunnegs as Fries proat.
@@ -8,7 +8,6 @@ Ien de gemeente worden twai verschillende toalen proat. Ien t noordoosten wordt 
 
 {{dia|Schreven ien t Westerkertiers}}
 {{Begin|gos}}
-{{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
