--- a/Winzum_(Grunnen).mw
+++ b/Winzum_(Grunnen).mw
@@ -19,7 +19,7 @@
 | websteade = [http://www.winsum.nl www.winsum.nl]
 }}
 
-'''Winzum''' is n [[daarp|dörp]] en n  [[gemiente (bestuur)|gemainte]] in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte het 14.051 inwoners (1 juli 2006, bron: CBS), beslogt n oppervlakte van 102,53 [[vierkante kilometer|km²]] (woarvan 1,56 km² woater).
+'''Winzum''' is n [[daarp|dörp]] en n  vrougere [[gemiente (bestuur)|gemainte]] in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte het 14.051 inwoners (1 juli 2006, bron: CBS), beslogt n oppervlakte van 102,53 [[vierkante kilometer|km²]] (woarvan 1,56 km² woater).
 
 t Dörp bestaait oet drij [[wierde (toponiem)|wierden]]: dij van Winzum zölf, Bellengweer en Obergum.
 
@@ -36,7 +36,5 @@ t Vernuimde [[Paiderpad]] lopt deur zowel Obergum as deur Winzum.
 == Indailn ==
 De gemainte Winzum omvat ook de volgende plakken: [[Abbeweer]], [[Oadorp]], [[Auwerderziel]], [[Allenhoezen]], [[Allersmoa]], [[Antem]], [[Aarwerd (Winzum)|Aarwerd]], [[Bavvelt]], [[Bellengweer]], [[Beswerd]], [[Bolshoezen]], [[Dingen]], [[De Roaken]], [[De Vennen]], [[Naandel]], [[Duusterwinkel]], [[Eernsheem]], [[Aizing]], [[Fiwwerd]], [[Garwerd]], [[Wetsen|Groot Wetsen]], [[Hammerlaand]], [[Haardeweer]], [[Haarzens]], [[Hekkem]], [[t Schoor]], [[Hiddenziel]], [[Lutje Garwerd]], [[Wetsen|Lutje Wetsen]], [[Krazzum]], [[Lutje Marne]], [[Lutke Saaksum]], [[Moarhoezen]], [[Obergum]], [[Oldenziel]], [[Oostum]], [[Roanum]], [[Raskert]], [[Soaksumhoezen]], [[Saauwerd]], [[Schoapehaals]], [[Schoaphaalsterziel]], [[Schifpot]], [[Schillnham]], [[Suttum]], [[Toekebosk]], [[Tijum]], [[Tinaalng]], [[Vaalkum]], [[Wierum (Grunnen)|Wierum]], [[Wierumerschaauw]] (gedailtelk), [[Wildeveld]].
 
-{{GemaintesGrunnen}}
-
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
