--- a/Zuudhörn.mw
+++ b/Zuudhörn.mw
@@ -19,7 +19,7 @@
 | websteade = [http://www.zuidhorn.nl www.zuidhorn.nl]
 }}
 
-'''Zuudhörn''' ([[Nederlaands]]: ''Zuidhorn'') is n loug en gemainte ien [[Grunnen (provìnzie)|provìnzie Grunneng]] in [[Nederlaand]].
+'''Zuudhörn''' ([[Nederlaands]]: ''Zuidhorn'') is n loug en vrougere gemainte ien [[Grunnen (provìnzie)|provìnzie Grunneng]] in [[Nederlaand]].
 
 De hudege gemainte ontstond op [[1 jannewoari]] [[1990]] deur t soamenvoegen van de vaaier gemaintes [[Auwerd]], [[Gruupskerk]], [[Ollehoof]] en Zuudhörn. Dizze vaaier gemaintes binnen nog trug te zain in de gemaintvlag, woarbie de vaaier greune 'zwoanen' stoan veur de vaaier vermoalege gemaintes. De gemainte is onderdiel van t [[COROP-gebied]] Overg Grunnen.
 
@@ -59,7 +59,5 @@ De gemainte Zuudhorn ligt sunt [[1866]] aan de [[treinvervoer|spoorlien]] [[Grun
 
 {{dia|Schreven ien t [[Westerkwartaaiers]]}}
 
-{{GemaintesGrunnen}}
-
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Vrougere gemainte in Grunnen]]
