--- a/Schinnen_(gemeente).mw
+++ b/Schinnen_(gemeente).mw
@@ -18,7 +18,7 @@ netnummer = 046 |
 postkode = 6155, 6174, 6365, 6436-6439 |
 webstie =[http://www.schinnen.nl/ www.schinnen.nl]|
 }}
-'''Schinnen''' ([[Limburgs]]: ''Sjènne'') is ne [[gemiente (bestuur)|gemeente]] in [[Limburg (Nederlaand)]], en mek deel uut van et Heuvellaand Noord. Vrögger heurden Schinnen ok bi-j de [[Westeleke Mienstreake]]. De heufdplaatse is et geliek-eneumde [[karkdarp]] [[Schinnen (plaatse)|Schinnen]]. 
+'''Schinnen''' ([[Limburgs]]: ''Sjènne'') is ne vroggere [[gemiente (bestuur)|gemeente]] in [[Limburg (Nederlaand)]], en mek deel uut van et Heuvellaand Noord. Vrögger heurden Schinnen ok bi-j de [[Westeleke Mienstreake]]. De heufdplaatse is et geliek-eneumde [[karkdarp]] [[Schinnen (plaatse)|Schinnen]]. 
 
 == Kernen ==
 Tot 1981 was et darp Schinnen ne zelfstandege gemeente. Deur ne gemeenteleke herindealing is de gemeente Schinnen in et joar doarnoa alderbastend uut-ebreid en hef 6 [[darp]]en en 9 [[buurtschop]]pen en [[gehucht]]en, woarvan 3 deels in ne andere gemeente ligt.
@@ -61,7 +61,5 @@ Antal inwonners won-kern op 1 januari 2005:
 == Vrömd ==
 In de gemeente Schinnen ligt twee stroaten met denzelfden name. De [[Altiarstroate]] kump zowal veur in Schinnen as in et [[karkdarp]] Oirsbekke. Dit is vrömd umdat dizzen stroatname noast dizze twee neet meer veurkump in Nederlaand.
 
-{{Limburg}}
-
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Gemainte in Nederlaands Limbörg]]
+[[Kategorie:Vroggere gemainte in Nederlaands Limbörg]]
