--- a/Vianen.mw
+++ b/Vianen.mw
@@ -20,7 +20,7 @@ netnummer = 0347 |
 postkode = 4130-4133 |
 webstie = [http://www.vianen.nl/ www.vianen.nl] |
 }}
-'''Vianen''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de [[Nederland]]se previnsie Utrecht. Tot 1 januari [[2002]] was et 'n deel van de previnsie [[Zuud-Hollaand]].
+'''Vianen''' is ne [[Stad (woonstee)|stad]] en vroggere [[gemiente (bestuur)|gemeente]] in de [[Nederland]]se previnsie Utrecht. Tot 1 januari [[2002]] was et 'n deel van de previnsie [[Zuud-Hollaand]].
 
 ==Geskiednis==
 Et gebeed is vanof umstreaks et joar 1000 bewond, en de eerste heern van Vianen waren nen zi-jtak van de femilie [[Van Zuylen van Nijevelt|van Zuylen]], wat ok trög te zeen is in et woapen.
@@ -49,8 +49,7 @@ Ofbeelding:Vianen satdspoorte.jpg|De Lekpoorte
 Ofbeelding:Vianen stadhuis 2006.jpg|Stadhoes van Vianen
 </gallery>
 
-{{Utrecht}}
-
 [[Kategorie:Achterhooks_artikel]]
-[[Kategorie:Gemeente in Utrecht]]
+[[Kategorie:Vroggere gemaente in Utrecht]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
 [[Kategorie:Plaots in Utrecht]]
