--- a/Binnenmaas.mw
+++ b/Binnenmaas.mw
@@ -18,7 +18,7 @@ netnummer = 0186, 078 |
 postkode = 3271, 3273, 3274, 3295, 3297, 3299 |
 webstie = [http://www.binnenmaas.nl www.binnenmaas.nl] |
 }}
-'''Binnenmaas''' is ne gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et ligt in de oolde laandsstrekke [[Hoeksche Waard]] (Hooksen Weard). Der wont 28.889 leu ([[2014]]) op ne vlakte van 75,60 km² (met 6,34 km² water). Et roadhoes steet in Maasdam.
+'''Binnenmaas''' is ne vroggere gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et ligt in de oolde laandsstrekke [[Hoeksche Waard]] (Hooksen Weard). Der wont 28.889 leu ([[2014]]) op ne vlakte van 75,60 km² (met 6,34 km² water). Et roadhoes steet in Maasdam.
 
 Et rechtevoortse Binnenmaas is der kömmen duurdet op [[1 jannewaori|1 januwoari]] [[2007]] de oolde gemeentes Binnenmaas en [['s Grawendeel]]. De vuurgoande gemeente Binnenmaas ontsteund in [[1984]] duur een samengoan van [[Puttershook]], [[Maasdam]], [[Mijnsherenlaand]], [[Westmaas]] en [[Heinenoord]].
 
@@ -28,6 +28,5 @@ Den naam hef de gemeente van de Binnendiekse [[Maas]], nen ofdamden oetleuper va
 In de gemeente Binnenmaas lignt de volgende kernen:
 [[Blaaksedijk|Blaaksendiek]], [['s-Gravendeel]], [[Goidschalxoord]], [[Greup]], [[Heinenoord]], [[Maasdam]] , [[Mijnsheerenlaand]], [[Puttershook]] en [[Westmaas]].
 
-{{Zuud-Hollaand}}
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
