--- a/Giessenlaanden.mw
+++ b/Giessenlaanden.mw
@@ -19,12 +19,10 @@ postkode = 3380, 3381, 4209, 4220, 4221, 4223, 4225, 4240, 4241|
 webstie = [http://www.giessenlanden.nl www.giessenlanden.nl] |
 }}
 
-'''Giessenlaanden''' ([[Nederlaands]]: ''Giessenlanden'') is ne gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 14.476 leu ([[2014]]) op ne vlakte van 65,19 km² (met 1,35 km² water).
+'''Giessenlaanden''' ([[Nederlaands]]: ''Giessenlanden'') is ne vroggere gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 14.476 leu ([[2014]]) op ne vlakte van 65,19 km² (met 1,35 km² water).
 
 ==Kernen==
 De leu wont verdeeld oawer de wonplaatsen [[Arkel]], [[Giessenburg]], [[Giessen-Oudekerk|Giessen-Ooldekaarke]], [[Hoogbloklaand]], [[Hoornoar]], [[Noordeloos]] en [[Schelluinen|Skellunen]]. Et roadhoes steet in Hoornoar.
 
-{{Zuud-Hollaand}}
-
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
