--- a/Korendiek.mw
+++ b/Korendiek.mw
@@ -18,7 +18,7 @@ netnummer = 0186|
 postkode = 3264-5, 3267, 3284 |
 webstie = [http://www.korendijk.nl www.korendijk.nl] |
 }}
-'''Korendiek''' ([[Nederlaans|Nederlaands]]: ''Korendijk'') is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Hierbie heurt ook et [[eilaand]] [[Tiengemeten]]. In de gemeente wont 10.716 leu op ne vlakte van 100,47 km². Hiervan is 23,21 km² water. Et roadhoes van de gemeente steet in [[Piershil]].
+'''Korendiek''' ([[Nederlaans|Nederlaands]]: ''Korendijk'') is ne vroggere [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Hierbie heurt ook et [[eilaand]] [[Tiengemeten]]. In de gemeente wont 10.716 leu op ne vlakte van 100,47 km². Hiervan is 23,21 km² water. Et roadhoes van de gemeente steet in [[Piershil]].
 
 Op et zuden van de gemeente lig et [[Hearingvliet]] en et [[Vuile Gat]]. Op et westen van de gemeente lig et [[Spui (Korendiek)|spui]], ne verbeending van et Hearingvliet en de [[Oolde Maas]].
 
@@ -27,6 +27,5 @@ De gemeente is vuural bekeand um et natuurgebeed vuur veugel, de [[Korendiekse S
 ==Wonkernen==
 In de gemeente Korendiek wont de leu verspreaid oawer de döarpe [[Piershil]], [[Gooldsweard]], [[Niej-Beijerlaand]] en [[Zuud-Beijerlaand]], en de [[boerskop]]pen [[Hitserse Kade]], [[Niejendiek]], [[Oosthook]], [[Ooldendiek]], [[Skeankeldiek]], [[Veurboaken]], [[Zuudziede (Korendiek)|Zuudziede]] en [[Zwartsluuske]].
 
-{{Zuud-Hollaand}}
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
