--- a/Möllenweard.mw
+++ b/Möllenweard.mw
@@ -19,12 +19,10 @@ postkode = 2957-2977|
 webstie = [http://www.gemeentemolenwaard.nl www.gemeentemolenwaard.nl] |
 }}
 
-'''Möllenweard''' ([[Nederlaands]]: ''Molenwaard'') is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont um en noabie de 29.000 leu op ne vlakte van 126,47 km² (met 8,18 km² an water). De gemeente wörd duur de völle [[gerefformeerd]]e koarken en de grötte van de [[SGP]]-partieje töt den [[biebelgördel]] rekkend.
+'''Möllenweard''' ([[Nederlaands]]: ''Molenwaard'') is ne vroggere [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont um en noabie de 29.000 leu op ne vlakte van 126,47 km² (met 8,18 km² an water). De gemeente wörd duur de völle [[gerefformeerd]]e koarken en de grötte van de [[SGP]]-partieje töt den [[biebelgördel]] rekkend.
 
 ==Wonsteas==
 Binnen de gemeente Möllenweard wont de leu verspreaid oawer de wonsteas [[Nieuwpoort]], [[Bleskensgraaf]], [[Braandwiek]], [[Goudriaan]], Groot-Ammers, [[Keenderdiek]], [[Langerak]], [[Molenaarsgraaf]], [[Niej-Lekkerlaand]], [[Ottoland]], [[Oold-Alblas]], [[Streefkaarke]], [[Wiengoarden]] en de [[boerskop]]pen [[Den Doonk]], [[Gelkenes]], [[Giebelaand]], [[Graaflaand]], [[Hofweagen]], [[Kooiwiek]], [[Liesveeld]], [[Voelendam]] en [[Waal]].
 
-{{Zuud-Hollaand}}
-
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
