--- a/Oold-Beierlaand_(gemeente).mw
+++ b/Oold-Beierlaand_(gemeente).mw
@@ -19,11 +19,9 @@ postkode = 3260-3263 |
 webstie = [http://www.oud-beijerland.nl www.oud-beijerland.nl] |
 }}
 
-'''Oold-Beierlaand''' ([[Nederlands|Hollaands]]: ''Oud-Beijerland'') Is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 23.683 leu op ne vlakte van 19,61 km². De gemeente is neumd noar zinne heuwdplaatse: et doarp [[Oold-Beierlaand (doarp)|Oold-Beierlaand]]. In de gemeente lignt wiedters nog de kerne [[Greup]], [[Vuurbaken]] en [[Zinkweg]].
+'''Oold-Beierlaand''' ([[Nederlands|Hollaands]]: ''Oud-Beijerland'') is ne vroggere [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 23.683 leu op ne vlakte van 19,61 km². De gemeente is neumd noar zinne heuwdplaatse: et doarp [[Oold-Beierlaand (doarp)|Oold-Beierlaand]]. In de gemeente lignt wiedters nog de kerne [[Greup]], [[Vuurbaken]] en [[Zinkweg]].
 
 Oold-Beierlaand is ne [[boer]]engemeente. De meeste inwonners van et doarp woarket oawer vear. Toch is et een middelpeunt van de strekke. Et ligt an et [[Spui]] en an den [[Oolden Maas]]. Doarnöast hef et nen [[jachthawen]]. In de gemeente wont beheurlik wat [[gerefformeerd]]en.
 
-{{Zuud-Hollaand}}
-
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
