--- a/Zederik.mw
+++ b/Zederik.mw
@@ -18,11 +18,10 @@ netnummer = 0183, 0345 en 0347 |
 postkode = 4126, 4128, 4230-4231, 4233, 4235, 4243, 4245 |
 webstie = [http://www.zederik.nl www.zederik.nl] |
 }}
-'''Zederik''' is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 13.699  leu op ne vlakte van 76,48 km² (met 2,38 km² water). De gemeente besteet seend [[1986]], toen as de zeuwen oolde gemeenten oet de [[Alblasserweard]] en [[Viefhearenlaanden]] bie mekoar gungen. Den naam keump van et [[Middeleeuwen|Middeeuwse]] [[kanaal]] de [[Oolde Zederik]], den as duur et gebeed löp. Et roadhoes steet in [[Meerkoarke]].
+'''Zederik''' is ne vroggere [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 13.699  leu op ne vlakte van 76,48 km² (met 2,38 km² water). De gemeente besteet seend [[1986]], toen as de zeuwen oolde gemeenten oet de [[Alblasserweard]] en [[Viefhearenlaanden]] bie mekoar gungen. Den naam keump van et [[Middeleeuwen|Middeeuwse]] [[kanaal]] de [[Oolde Zederik]], den as duur et gebeed löp. Et roadhoes steet in [[Meerkoarke]].
 
 ==Wonkernen==
 De leu wont verspreaid oawer de kerne [[Ameide]], [[Hei- en Boeikop]], [[Leerbrook]], [[Lexmoond]], [[Meerkoarke]], [[Niejlaand (Zederik)|Niejlaand]] en [[Tienhowen]]. Ameide is de ennigste stad.
 
-{{Zuud-Hollaand}}
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
