--- a/Leerdam.mw
+++ b/Leerdam.mw
@@ -19,7 +19,7 @@ postkode =  4141-2, 4145, 4163, 4247 |
 webstie =[http://www.leerdam.nl www.leerdam.nl] |
 }}
 
-'''Leerdam''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Zuud-Hollaand]].
+'''Leerdam''' is ne [[Stad (woonstee)|stad]] en vroggere [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Zuud-Hollaand]].
 
 == Geskiednis ==
 Leerdam kreg [[stadsrechten]] in [[1407]]. Et reviertjen den [[Linge]], umgeaven deur rietwallen en völle waterlillies bepoalen den uutstroaling van et laand. Tot [[1984]] beheurden et tot de Viefherenlaanden. 
@@ -64,8 +64,5 @@ Ofbeelding:Leerdam_karke.jpg|Karke
 
 {{commonscat}}
 
-{{Zuud-Hollaand}}
-
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Gemeente in Zuud-Hollaand]]
-[[Kategorie:Plaotse in Zuud Hollaand]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
