--- a/Leerdam.mw
+++ b/Leerdam.mw
@@ -3,7 +3,7 @@ naam = Leerdam |
 bestaandsnaam vlagge = Leerdam flag.svg |
 bestaandsnaam woapn = Leerdam wapen.svg |
 lokatie = LocatieGoedereede |
-proveensie = [[Ofbeelding:Flag Zuid-Holland.svg|20px|Zuud-Hollaand]] [[Zuud-Hollaand]] |
+proveensie = [[Utrecht (provinsie)|Utrecht]] |
 heufdplaats = '''Leerdam''' |
 öppervlakte = 34,32 |
 öppervlakte laand = 34,32 |
@@ -19,7 +19,7 @@ postkode =  4141-2, 4145, 4163, 4247 |
 webstie =[http://www.leerdam.nl www.leerdam.nl] |
 }}
 
-'''Leerdam''' is ne [[Stad (woonstee)|stad]] en vroggere [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Zuud-Hollaand]].
+'''Leerdam''' is ne [[Stad (woonstee)|stad]] in de Nederlandse previnsie [[Utrecht (provinsie)|Utrecht]] en vroggere [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Zuud-Hollaand]].
 
 == Geskiednis ==
 Leerdam kreg [[stadsrechten]] in [[1407]]. Et reviertjen den [[Linge]], umgeaven deur rietwallen en völle waterlillies bepoalen den uutstroaling van et laand. Tot [[1984]] beheurden et tot de Viefherenlaanden. 
@@ -66,3 +66,4 @@ Ofbeelding:Leerdam_karke.jpg|Karke
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
+[[Kategorie:Plaots in Utrecht]]
