/* De verwarping en et vervolg */

--- a/Arianisme.mw
+++ b/Arianisme.mw
@@ -6,7 +6,7 @@ Et '''Arianisme''' was, nåst et [[Katholicisme|katolicisme]], een invloodryke s
 Arius wol niks med de gedachte dat Jesus, de söäne van God, ouk God sülv sol weasen. Arius güngen der van uut dat Jesus et eyrste esköäpen skepsel was. Sowal Jesus as de Heiligen Geyst wördet esene as skepping van God de vader, wülken under-eskikt bint. Jesus is hyrby allinnig under-eskikt an God, terwyl den Heiligen Geyst under-eskikt is an sowal Jezus as God. De leyre dat Christus de söäne van God is en ouk God sülven, is fundementeyl vöär et katolike en protestantse christlike gelöyv.
 
 ==De verwarping en et vervolg==
-Tydens Concily van Nicea in 325 wördt 't Arianisme officieel as ketterye bestempeld. In de [[geleufsbeliedenis van Nicea|gelöyvsbelydenisse van Nicea]] wördt benådrükt dat God en syn söäne ‘uut et sülvde holt esneaden’ bint. Nå ‘Nicea’ blevt de strouming sich uutbreidden. Tydens et Concilie van Constantinopel in 381 volged een nye veroordeyling. Keiser Theodosius I hevt hyr strenge up-etreaden teagen de ‘ketters’ en rund 400 is et Arianisme so good as verdweanen.
+Tydens Concily van Nicea in 325 wördden et Arianisme officieel as ketterye bestempeled. In de [[geleufsbeliedenis van Nicea|gelöyvsbelydenisse van Nicea]] wördt benådrükt dat God en syn söäne ‘uut et sülvde holt esneaden’ bint. Nå ‘Nicea’ blevt de strouming sich uutbreidden. Tydens et Concilie van Constantinopel in 381 volged een nye veroordeyling. Keiser Theodosius I hevt hyr strenge up-etreaden teagen de ‘ketters’ en rund 400 is et Arianisme so good as verdweanen.
 
 In unse tyd wördt nargens melding emaakt van een herleaving van disse so-enömeden ‘ketterske’ strouming. Toch bint der steads meyr (eks-) christenen dee et de goddelike oorsprüng van Jesus betwyvelet. Dat betekkent neet dat sy van hüm ofskied nemt as ear geysteliken leider en inspirator. Hy blevt ear groute vöärbeyld: ouk as menske med menskelike folten, ouk as vermend kearl van Marie van Magdalena, ouk as vader van ear vermende kind en sülvs as brunne van vöäle moorden en oorlogen tüsken mensken.
 
