*Empty MediaWiki Message*

--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,7 +1,7 @@
-[[Bestaand:Menorah7a.png|thumb|250px|De menora is 'n symbool van 't Jeudendom en zol oorspönkelik deel ewest he'm van 't meubilair van de tempel van Sjlomo]]
-'t '''Jeudendom''' is 't geleuf van 't jeudse volk, 't is iene van de vrogs onstaone monotheïstische godsdiensten. Vandage de dag bestiet 't altied nog en wöd 't altied nog beleden deur jeuden, met name in Israël.
+[[Bestaand:Menorah7a.png|thumb|250px|De menora is een symbool van et jöydendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de tempel van Salomo]]
+Et '''jöydendom''' is et gelöyv van et jöydske volk, et is eyne van de vrogst unståne godsdeensten dee mar eyne god earen doot. [[Monteitisme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in Israël.
 
-'t Jeudendom kan nie makkelik in westerse hokkies stopt wödden zo as religie, ras, etniciteit of cultuur, dit umdat jeuden over 't jeudendom praot in tarms van 4000 joor geschiedenisse. Tiedens disse lange tiedpark hebt jeuden slaoverni'je, chaos, theocratie, verovering, bezetting en ballingschop ervoort en bint zi'j in contact ewest en beïnvluud deur 't oale Egypte, Babylonië, Perzië, 't Griekse hellinisme, evenals moderne bewegingen zo as de [[Verlichting]], 't socialisme en de opköms van 't nationalisme.  'n Hele bulte kunt wi'j wel ze'ng.
+Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as religy, rasse, etniciteit of kultuur, dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår geskydenisse. Tydens disse lange tydpark hebbet jöyden slavernye, chaos, theokraty, verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde Egypte, Babylonië, Perzië, et greekske hellinisme, eavenas moderne beweagingen so as de [[Verlichting]], et socialisme en de opkümts van et nationalisme.  Een heyle bülte künnet wy wal seggen.
 
 Jeudse geschrifen en hun geschiedenisse is vake bruukt deur aand're luu as historische fundament, door bint aand're religies deur onstaone, zo as twi'je hele bekenden: Christendom en Islam.
 
