--- a/Almannaskarðsgöng.mw
+++ b/Almannaskarðsgöng.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Almannaskardsgöng.JPG|250px|thumb|right|Zuudlike ingang van n Almannaskarðsgöng.]]
+[[Ofbeelding:Almannaskard-02-Tunneleinfahrt-2018-gje.jpg|250px|thumb|right|Zuudlike ingang van n Almannaskarðsgöng.]]
 [[Ofbeelding:2008-05-23 20 Skarðsfjörður.jpg|250px|thumb|right|Almannaskarð-bargpas.]]
 n '''Almannaskarðsgöng''' is nen [[tunnel]] öp de [[Hringvegur]], dichbiej [[Höfn]] (Hornafjörður) in [[Austurland]] in Oost-[[Ieslaand]]. n Tunnel is exakt 1312 m lang (moar t bördskn rönd t of noar 1300) en was lös-doan öp 24 junie [[2005]]. n Tunnel geet önner n smaln en steailn Almannaskarð-[[bargpas]], tuskn [[Hornafjörður]] en [[Lón]]. n Pas is nöch steads toogänklik in n zommertied en d'r is ne parkearploatse met n praachtig oetzich.
 
