*Empty MediaWiki Message*

--- a/Almannaskarðsgöng.mw
+++ b/Almannaskarðsgöng.mw
@@ -1,8 +1,8 @@
 [[Ofbeelding:Almannaskard-02-Tunneleinfahrt-2018-gje.jpg|250px|thumb|right|Zuudlike ingang van n Almannaskarðsgöng.]]
 [[Ofbeelding:2008-05-23 20 Skarðsfjörður.jpg|250px|thumb|right|Almannaskarð-bargpas.]]
-n '''Almannaskarðsgöng''' is nen [[tunnel]] öp de [[Hringvegur]], dichbiej [[Höfn]] (Hornafjörður) in [[Austurland]] in Oost-[[Ieslaand]]. n Tunnel is exakt 1312 m lang (moar t bördskn rönd t of noar 1300) en was lös-doan öp 24 junie [[2005]]. n Tunnel geet önner n smaln en steailn Almannaskarð-[[bargpas]], tuskn [[Hornafjörður]] en [[Lón]]. n Pas is nöch steads toogänklik in n zommertied en d'r is ne parkearploatse met n praachtig oetzich.
+'n '''Almannaskarðsgöng''' is nen [[tunnel]] öp de [[Hringvegur]], dichtbiej [[Höfn]] (Hornafjörður) in [[Austurland]] in Oost-[[Ieslaand]]. 'n Tunnel is exakt 1312 meater lang (moar 't bördsken rönd 't of noar 1300) en was lös-doan öp 24 junie [[2005]]. 'n Tunnel geet önner 'n smallen en steailen Almannaskarð-[[bargpas]], tusken [[Hornafjörður]] en [[Lón]]. 'n Pas is nöch steads toogänklik in 'n zommertied en d'r is ne parkearploatse met 'n praachtig oetzicht.
 
-Tiedns n weentertied mötn de wegge slötn wörn ömde't mangs sneejn, woardeur t verkear blokkeard wörn noar en van t eustn van Ieslaand, dös zee vängn an nen niejn tunnel te baawn in moart [[2004]] en was endigd in oktober van t zölfde joar. n Tunnel geet deur zoo ne 1150 m van soliedn rots en 162 m deur sement, woardeur de tötoale längte 1312 wört. De wegge is twea löane bread, moar d'r bint ok drea inhoallöane in n tunnel veur noodverkear. n Zuudingang leg 39 m boawn N.A.P. en n noordingang 82 m boawn N.A.P., wat t gradiënt 4,6% makket.
+Tiedens 'n weentertied mötten de wegge slötten wörden ömdet 't mangs sneejen, woardeur 't verkear blokkeard wörden noar en van 't eusten van Ieslaand, dös zee vängen an nen niejen tunnel te bawen in moart [[2004]] en was endigd in oktober van 't zölfde joar. 'n Tunnel geet deur zo ne 1150 meater van solieden rots en 162 meater deur sement, woardeur de tötoale längte 1312 wörd. De wegge is twea löane bread, moar der bint ok drea inhoallöane in 'n tunnel veur noodverkear. 'n Zuudingang leg 39 meater boawen N.A.P. en 'n noordingang 82 meater boawen N.A.P., wat 't gradiënt 4,6% makket.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Tunnel in Ieslaand]]
