--- a/Pierre_Bonnard.mw
+++ b/Pierre_Bonnard.mw
@@ -1,16 +1,16 @@
 [[File:Bemberg Fondation Toulouse - Dernier autoportrait de Pierre Bonnard de 1945 - 56x46.jpg|thumb|Pierre Bonnard]]
-'''Pierre Bonnard''' was 'n [[Fraankriek|fransk]] post-impressionistiske skilder, geboaren up [[13 oktober]] [[1867]] up [[Fontenay-aux-Roses]] - uut de tyd up [[23 jannewaori|23 jannuari]] [[1947]] up [[Le Cannet]].
+'''Pierre Bonnard''' was een [[Fraankriek|vransk]] post-impressionistiske skilder, geboaren up [[13 oktober]] [[1867]] up [[Fontenay-aux-Roses]] - uut de tyd up [[23 jannewaori|23 januari]] [[1947]] up [[Le Cannet]].
 
-Bonnard hevt ait up sichsölv ewarked en is dårümme ouk neet simpel in te deylen by een bepålde styl. Nåst skilderen, illestrereden hr vake vöär blader en hevt ouk noch een mål ern ebrandskilderde rute maked. Y sült in syn wark nooit geweld teagenkummen. Bonnard kekken ait med vöäle wille når de kleine dinge van et leaven, en dat dööd he in syn skilderyen. Hy skildereden vöäle stråttafferelen uut [[Parijs]] of landskappen uut Süüd-Frankryk achter een vulle untbyttåvel. Typiske Bonnard-underwarpen nå 1903 bint binnenkanten van een huus med vrouwlüde dee gangs waren an ear pot en stilleleavens.
+Bonnard hevt ait up sichsülv ewarked en is dårümme ouk neet simpel in te dealen by een bepålde styl. Nåst skilderen, ilustreyreden hee vake vöär blader en hevt ouk noch een mål een ebrandskilderde rute emaked. Y sült in syn wark noit geweld teagenkummen. Bonnard kekken ait med vöäle wille når de kleine dinge van et leaven, en dat döäd hee in syn skilderyen. Hy skilderden vöäle stråttafferelen uut [[Parijs]] of landskappen uut Süüd-Vrankryk achter een vulle untbyttåvel. Typiske Bonnard-underwarpen nå 1903 bint binnenkanten van een huus med vrouwlüde dee gangs waren an ear pot en stilleleavens.
 
-Bonnard wördt döär syn klörige rüümtes ouk wel de lätste der impressionisten enöömd. Mar syn manyre van warken verskilden inholdelik met den van de impressionisten; wår impressionisten een indrük van een moment wolden låten see, dår kün Bonnard manks jåren an de kompesity gangs weasen te veranderen.
+Bonnard wördt döär syn klörige rüümtes ouk wal de lätste der impressionisten enöömd. Mar syn manere van warken verskilden inholdelik met den van de impressionisten; wår impressionisten een indrük van een moment wolden låten see, dår könden Bonnard mangs jåren an de kompesity gangs weasen te veranderen.
 
-==Leven==
-Pierre Bonnard dööd een rechtenstudy an de [[Sorbonne]] in Parys van 1886 töt 1889 en een künstupleiding up 1888/89 an de [[Ecole des Beaux-Arts]] en vervolgens an de [[Académie Julian]].
+==Leaven==
+Pierre Bonnard döäd een rechtenstudy an de [[Sorbonne]] in Parys van 1886 töt 1889 en een künstupleiding up 1888/89 an de [[Ecole des Beaux-Arts]] en vervolgens an de [[Académie Julian]].
 
-An de Académie Julian leyrfen he [[Ker-Xavier Roussel]] en [[Paul Sérusier]], [[Maurice Denis]] en [[Jean­ Edouard Vuillard]] kennen den hüm wys maakten med et wark van [[Paul Gauguin]]. Dit güngen up 1888 når een untmöting van ear up Pont-Aven. Nåst Gauguin wördden he slim beinvlood van de toon eartyds up Europa wyd ewörden Japanske klörenholtsneades, wår as der allinnig med lynes en groute klöörvlakken ewarked wörd. 
+An de Académie Julian leyrden hee [[Ker-Xavier Roussel]] en [[Paul Sérusier]], [[Maurice Denis]] en [[Jean­ Edouard Vuillard]] kennen, den hüm wys makeden med et wark van [[Paul Gauguin]]. Dit güngen up 1888 når een untmöting van ear up Pont-Aven. Nåst Gauguin wördden hee slim beinvlood van de toon eyrtyds up Europa wyd ewörden japanske klörenholtsneades, wår as der alleynig med lynes en groute klöörvlakken ewarked wördden. 
 
-Up 1890 satten he kört in Militaire deenst, wår as med stoppen ümme de heylen tyd as künstenaar künnen gån warken.
+Up 1890 satten hee kört in militäre deenst, wår as med stoppen ümme de heylen tyd as künstenaar künnen gån warken.
 
 {{Dialekt|sdz}}
 [[Kategorie:Frankriek]]
