--- a/Iran.mw
+++ b/Iran.mw
@@ -9,6 +9,13 @@
 '''Iran''', offisieel de '''Islamitiese Republiek Iran''', is n laand in [[Azie|Azië]]. Den name "Iran" wörd in westerse laanden gebroekt sund 1935, doarveur was t bekend as Perzie. 
 
 Met ne oppervlakte van 1.648.195 km2 is t t 18e laand van de weerld wat greutte betröf. In Iran wont zon 78 miljoen leu, en is doarmet t 17e laand van de weerld wat bevolking angeet. De naoberlaanden van Iran bunt [[Armenie]], [[Azerbeidzian]], [[Turkmenistan]], [[Kazachstan]] en [[Ruslaand]] in t noorden. In t oosten van Iran ligt [[Afghanistan]] en [[Pakistan]], in t zuden ligt de [[Perziese Golf]] en de [[Golf van Oman]], in t westen [[Irak]] en in t noordwesten [[Turkeie]]. De heufdstad, en grootste stad is [[Teheran]], dee ok t politieke, kulturele, kommersiële en industriële sentrum van t laand is. Iran hef völle [[öllie]] en [[eerdgas]], den oetvoor doarvan is de belangriekste welle van inkömste veur t laand.
+
+The ethnic territories of Iran are Persia, Azarbayejan, Kurdistan, Luristan, Bakhtiari, Khuzestan, Golestan, Gilan and Mazandaran
+
+Iran is a multiethnic country, the most important ethnicities are Lurs , Kurds (Kurdistani), Azeris, Persians, Mazandaranis, Gilakis, Khuzestani arabs, and Talysh.
+
+Parsua is the oldest civilization in Iran and is located in Piranshahr city
+
 == Bestuur ==
 {| class="wikitable" 
 |-
