*Empty MediaWiki Message*

--- a/Almannaskarðsgöng.mw
+++ b/Almannaskarðsgöng.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Almannaskard-02-Tunneleinfahrt-2018-gje.jpg|250px|thumb|right|Zuudlike ingang van n Almannaskarðsgöng.]]
 [[Ofbeelding:2008-05-23 20 Skarðsfjörður.jpg|250px|thumb|right|Almannaskarð-bargpas.]]
-'n '''Almannaskarðsgöng''' is nen [[tunnel]] öp de [[Hringvegur]], dichtbiej [[Höfn]] (Hornafjörður) in [[Austurland]] in Oost-[[Ieslaand]]. 'n Tunnel is exakt 1312 meater lang (moar 't bördsken rönd 't of noar 1300) en was lös-doan öp 24 junie [[2005]]. 'n Tunnel geet önner 'n smallen en steailen Almannaskarð-[[bargpas]], tusken [[Hornafjörður]] en [[Lón]]. 'n Pas is nöch steads toogänklik in 'n zommertied en d'r is ne parkearploatse met 'n praachtig oetzicht.
+'n '''Almannaskarðsgöng''' is nen [[tunnel]] öp de [[Hringvegur]], dichtbiej [[Höfn]] (Hornafjörður) in [[Austurland]] in Oost-[[Ieslaand]]. 'n Tunnel is exakt 1312 meater lang (moar 't bördsken rönd 't of noar 1300) en was lös-doan öp 24 junie [[2005]]. 'n Tunnel geet önner 'n smallen en steailen Almannaskarð-[[bargpas]], tusken [[Hornafjörður]] en [[Lón]]. 'n Pas is nöch steads toogänk'lik in 'n zommertied en d'r is ne parkearploatse met 'n praachtig oetzicht.
 
 Tiedens 'n weentertied mötten de wegge slötten wörden ömdet 't mangs sneejen, woardeur 't verkear blokkeard wörden noar en van 't eusten van Ieslaand, dös zee vängen an nen niejen tunnel te bawen in moart [[2004]] en was endigd in oktober van 't zölfde joar. 'n Tunnel geet deur zo ne 1150 meater van solieden rots en 162 meater deur sement, woardeur de tötoale längte 1312 wörd. De wegge is twea löane bread, moar der bint ok drea inhoallöane in 'n tunnel veur noodverkear. 'n Zuudingang leg 39 meater boawen N.A.P. en 'n noordingang 82 meater boawen N.A.P., wat 't gradiënt 4,6% makket.
 
