Versie 301416 van [[Special:Contributions/85.145.139.92|85.145.139.92]] ([[User talk:85.145.139.92|overleg]]) weerummedreid

--- a/Verienigde_Staoten_van_Amerika.mw
+++ b/Verienigde_Staoten_van_Amerika.mw
@@ -37,7 +37,8 @@ De zes grootste steden van de Verienigde Staoten bint:
 # [[Philadelphia (Pennsylvania)|Philadelphia]]
 # [[Phoenix (Arizona)|Phoenix]]
 
-== U ==
+== Uutgaonde verwiezingen ==
+{{Commonscat|United States}}
 {{Wiktionary}}
 
 [[Kategorie:Drèents artikel]]
