--- a/Kommunisme.mw
+++ b/Kommunisme.mw
@@ -1,4 +1,4 @@
-[[Bestaand: Communist star.svg|thumb|right|200px|Teken van kommunisme: Hamer en Sikkel]]
+[[Bestaand: Red star with hammer and sickle.svg|thumb|right|200px|Teken van kommunisme: Hamer en Sikkel]]
 t '''Kommunisme''' is nen [[Samenleaving|samenleawingsvörm]] woerin at staanden en klassen nit bestoat of der achterhen edoan wordt, en oarmood in de haande eheulden wordt, en t politieke gedachengood en sosjale beweagingen wordt of estemd op t anjagen en behoolden van zonne samenleawing. Kommunisme is bedacht duur [[Karl Marx]]. Hee meanden det t kommunisme n lesten stap noar de beste samenleawing is, den't bereikt wörd duur ne opstaand van t gewone volk, en den't allene meugelik is noadet ne sosjalistiese fase de produktieve krachten ontwikkelt, wat oeteaindelik töt n oawervlood van goderen en diensten lid.
 
 "Puur kommunisme", zo as Marx det bedoolden, heuld in ne klassenloze, stoatenloze en oonderdrukkingsvrieje samenleawing, woerin't [[demokratie]]s wörd bepoald wat der emaakt mut worden en wat vuur besloetvörming evolget mut worden. Hierduur hef ieder lid van de samenleawing deel in de politieke en ekonomiese besloetvörming. Rechtevoort wörd kommunisme aait in verbaand ebracht met [[Bolsjewisme]] of [[Marxime-Leninisme]] en de besloetsvörme van de verskeaidene kommunistiese laanden woerin't de regearing baas was oawer alle produksiemeugelikheden en centraal esteurde ekonomieën. Kommunistiese oawerhearsingsvörme, dee't allemoal evörmd zeent noar leninisties model, warren meesttieds [[autoritear]], oonderdrukkend en manipulerend, en probeerden vuurnamelik öare egene macht te behoolden.
