--- a/Lyste_van_städen_in_Luxembörg.mw
+++ b/Lyste_van_städen_in_Luxembörg.mw
@@ -1,7 +1,7 @@
 [[File:Cities of Luxembourg.PNG|frame|right|Städen in Luxembörg]]
 Der binnen officieel twaalv '''städen in et Grouthartogdom Luxembörg'''. De titel ''stad'' is in [[Luxembörg]] per [[wet]] vasteleagd. Undanks de ståtus as [[stad]], binnen et neet allemåle aneyneslöäten verstädelikede gebeden. De städen kummen so good as oavereyne mid de [[luxembörgske gemeynde]]n (up [[Clerveaux]] nå). De städen en gemeynden hebben een aparte ståtus mid weg-en-weare wat techniske verskillen, mär in de praktyk is dit te verwaarlousen.
 
-Een antal städen dragen de titel ''stad'' al sinds de middeleywen, mär de meyste städen in Luxembörg bestån eyrst sinds eyn of twey eywen. Up 27 februari 1843 wördden de ståtus as ''stad'' van söäven van de acht luxembörgske städen herbevästigd - Luxembörg-Stad, Diekirch, Grevenmacher, Echternach, Wiltz, Vianden en Remich -, allinnig [[Clervaux]] mos et untgelden. In 1906 en in 1907 kreygen vüüv nye gemeynden de titel ''stad''. Up 7 april 1914 kreyg ouk de gemeynde Hollerich de titel stad, mär nå de gemeyndelike herindeyling van 26 määrt 1920 is et up-egån in Luxembörg-Stad. Up 13 december 1988 volgde per wet een herbevästiging van de twaalv städen.
+Een antal städen dragen de titel ''stad'' al sinds de middeleywen, mär de meyste städen in Luxembörg bestån eyrst sinds eyn of twey eywen. Up 27 februari 1843 wördden de ståtus as ''stad'' van söäven van de acht luxembörgske städen herbevästigd - Luxembörg-Stad, Diekirch, Grevenmacher, Echternach, Wiltz, Vianden en Remich -, allinnig [[Clervaux]] mos et untgelden. In 1906 en in 1907 kreygen vyv nye gemeynden de titel ''stad''. Up 7 april 1914 kreyg ouk de gemeynde Hollerich de titel stad, mär nå de gemeyndelike herindeyling van 26 määrt 1920 is et up-egån in Luxembörg-Stad. Up 13 december 1988 volgde per wet een herbevästiging van de twaalv städen.
 
 == Lyste van städen ==
 [[File:Luxemburg.jpg|thumb|right|250px|Luxembörg-Stad / ''Lëtzebuerg'']]
