*Empty MediaWiki Message*

--- a/Fransk.mw
+++ b/Fransk.mw
@@ -2,7 +2,7 @@ Et '''fransk''' (in de taal selvs: ''français'') is een romaanske taal dee voor
 
 Et fransk wykt up een grout antal punten van de andere romaanske talen of. As eyrste hevt et fransk een veargånde ofslyting van morfologiske üütgangen. Ten tweyde hevt et fransk een grout antal breakings en klankveranderings, dee al in et [[oldfransk]] vöärkwammen en in et [[middelfransk]] döärevolueerd binnen. Ten darde hevt et een licht keltiske substråt (wearumme te seen in een woord as quatre-vingt, "tachetig", letterlik "veer-twintig"; in de keltiske talen wordt der in twintigtallen teld) en een slim ingrypende germaanske, vöäral frankiske, superstråt, dat him under meyr utert in de dubbele untkennings ''ne ... pas'', ''ne ... rien'', ''ne ... personne'' ens. 
 
-Döärdat et fransk een geleevde taal was by de [[Europa|europääske]] elite rund de [[17e eeuw|17.]] tot de [[19e eeuw|19. eyw]], hevt et ouk düdelike sporen nålaten in et neadersassisk en et neaderlandsk. Een pår vöärbealden dårvan binnen: ''duusjen'' (doucher), ''avveceren'' (avancer), ''büro'' (bureau), ''parmetåsy'' (parentage), ''nivo'' (niveau), ''toilet'' (toilette), ''begasy'' of ''pakkasy'' (bagage).
+Döärdat et fransk een geleevde taal was by de [[Europa|europääske]] elite rund de [[17e eeuw|17.]] tot de [[19e eeuw|19. eyw]], hevt et ouk düdelike sporen nålaten in et neadersassisk en et neaderlandsk. Een pår vöärbealden dårvan binnen: ''duusjen'' (doucher), ''avveceren'' (avancer), ''buro'' (bureau), ''parmetåsy'' (parentage), ''nivo'' (niveau), ''toilet'' (toilette), ''begasy'' of ''pakkasy'' (bagage).
 
 Üüt et fransk binnen verskillende [[kreooltaal|kreooltalen]] untstån, een vöärbeald dårvan is et [[haitiaansk kreoolsk]]. 
 
