--- a/Düünkarke.mw
+++ b/Düünkarke.mw
@@ -1,13 +1,13 @@
-[[Bestaand:Dunkerque Town Hall.jpg|thumb|Gemeyntehuus van Duunkarke]]
+[[Bestaand:Dunkerque Town Hall.jpg|thumb|Gemeyndehüüs van Düünkarke]]
 
-'''Düünkarke''' (in et [[Frans|fransk]] selv: ''Dunkerque'', [[Nederlaands|neaderlandsk]]: ''Duinkerke(n)'', [[Hoogduuts|hougdüütsk]]: ''Dünkirchen'') is een industriele- en havenstad in [[Frankriek|Noordfrankryk]] an de südelike [[Noordzee|Noordseyküst]], in de vöärmålige [[pervincie|provincy]] [[Frans-Vlaanderen|Fransk-Vlaanderen]], so'n twintig kilometer vanof de [[België|belgiske]] grens by [[De Panne]]. Et is ouk een [[Gemiente (bestuur)|gemeynte]] in et [[gewest]] [[Upper-Frankriek|Upperfrankryk]] (fransk: ''Région Hauts-de-France'') en et is de [[heufdstad|höyvdstad]] van et gelyknamige arrondissement, dat groutendeyls overeynekümt mid de [[Franse Westhoek|franske Westhook]].
+'''Düünkarke''' (in et [[Frans|fransk]] selv: ''Dunkerque'', [[Nederlaands|neaderlandsk]]: ''Duinkerke(n)'', [[Hoogduuts|hougdüütsk]]: ''Dünkirchen'') is een industriele- en havenstad in [[Frankriek|Noordfrankryk]] an de südelike [[Noordzee|Noordseyküst]], in de vöärmålige [[pervincie|provincy]] [[Frans-Vlaanderen|Fransk-Vlaanderen]], so'n twintig kilometer vanof de [[België|belgiske]] grens by [[De Panne]]. Et is ouk een [[Gemiente (bestuur)|gemeynde]] in et [[gewest]] [[Upper-Frankriek|Upperfrankryk]] (fransk: ''Région Hauts-de-France'') en et is de [[heufdstad|höyvdstad]] van et gelyknamige arrondissement, dat groutendeyls overeynekümt mid de [[Franse Westhoek|franske Westhook]].
 
-De [[Stad (woonstee)|stad]] selv hevt üm en nåby de neagentig dusend [[Bevolking|inwoaners]].<ref>{{formatnum:88876}} inwoaners in 2015</ref> Samen mid sesteen büürgemeynten formt et de Städelik gemeynskap van Düünkarke (fransk: ''Communauté urbaine de Dunkerque'') en dårmid kümt de plåtse üüt up rüüm tweyhunderddusend inwoaners.<ref>{{formatnum:198814}} inwoaners in 2013</ref> De Groute seyhaven van Düünkarke (fransk: ''Grand port maritime de Dunkerque'') is et darde groutste seyhavengebeed van Frankryk nå dee van [[Marseille]] en [[Le Havre]], mid so ungevear tüsken de veertig en vyvtig miljoon ton wat jårliks elösd of eladan wördt.<ref>{{formatnum:46.7}} miljoon ton in 2016</ref>
+De [[Stad (woonstee)|stad]] selv hevt üm en nåby de neagentigdüsend [[Bevolking|inwoaners]].<ref>{{formatnum:88876}} inwoaners in 2015</ref> Samen mid sesteen büürgemeynden formt et de Städelik gemeynskap van Düünkarke (fransk: ''Communauté urbaine de Dunkerque'') en dårmid kümt de plaatse üüt up rüüm tweyhunderddüsend inwoaners.<ref>{{formatnum:198814}} inwoaners in 2013</ref> De Groute seyhaven van Düünkarke (fransk: ''Grand port maritime de Dunkerque'') is et darde groutste seyhavengebeed van Frankryk nå dee van [[Marseille]] en [[Le Havre]], mid so ungevear tüsken de veertig en vyvtig miljoon ton wat jårliks elösd of eladen wördt.<ref>{{formatnum:46.7}} miljoon ton in 2016</ref>
 
 De stad steyt bekend vanweagen et ''[[karnevaal|Karneval]] van Düünkarke''.
 
 == Üütgånde verwysingen ==
-* [https://www.ville-dunkerque.fr/ Officiele websteade van de gemeynte] <small>(fransk / engelsk)</small>
+* [https://www.ville-dunkerque.fr/ Officiele websteade van de gemeynde] <small>(fransk / engelsk)</small>
 * [https://www.dunkerque-tourisme.fr/ Officiele websteade vöär turisme] <small>(fransk / neaderlandsk / engelsk)</small>
 * [https://www.communaute-urbaine-dunkerque.fr/ Officiele websteade van de Städelik gemeynskap van Düünkarke] <small>(fransk)</small>
 * [http://www.dunkerque-port.fr/ Officiele websteade van de Groute seyhaven van Düünkarke] <small>(fransk / engelsk / manderyn)</small>
