--- a/Universidade_do_Estado_de_Minas_Gerais.mw
+++ b/Universidade_do_Estado_de_Minas_Gerais.mw
@@ -1,3 +1,5 @@
+[[File:Uemg.png|thumb|right|<center> UEMG </center>]] 
+
 De '''Universiteat Minas Gerais''' ([[Portugees]]k: ''Universidade do Estado de Minas Gerais'' - UEMG) is ne [[Brazilië|Braziljaansen]] [[universiteat]] in de [[Belo Horizonte]].<ref name="uemg">[http://www.uemg.br/apresentacao.php História da UEMG], Institucional, 11 de novembro de 2014</ref> Hee is op erichtet in 1989. Der stoat non 23.008 studeanten in eskrewen.<ref name="uemg"/> 
 
 == Referensies ==
