--- a/Emmerik.mw
+++ b/Emmerik.mw
@@ -48,7 +48,7 @@ Bi-j ''Pauseleken Bulle Salutte Annimarum'' van [[16 juli]] [[1821]] wöd Emmeri
 Ofbeelding:Emmerich_St._Martinikarke.jpg|St.Martinikarke
 Ofbeelding:Emmerich_rijnbrugge.jpg|Uutzicht op de brugge oaver den Rijn
 Ofbeelding:Emmerich_Christuskarke.jpg|Christuskarke
-Ofbeelding:Aldegondiskarke.jpg|Aldegondiskarke
+Ofbeelding:St. Aldegundis, Emmerich am Rhein-3782.jpg|Aldegondiskarke
 </gallery>
 
 [[Kategorie:Achterhooks artikel]]
