[[Bu_Njem.JPG]] is vervungen deur [[Roman_fort_Gholaia-Bu_Njem,_Libya.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: correct name

--- a/Limes.mw
+++ b/Limes.mw
@@ -25,7 +25,7 @@ Den name van n tröpken castella (mit euren afstaanden) bunt oaver-elaeverd op d
 Den [[Unesco]] oaverwaegt den limes op de waeldarfgoodlieste te zetten. Veur n deel van den limes in [[Duutslaand]] is dat al ebeurd. In Nederlaand is neet völle meer te zeen van den limes. De gemeenten bunt doarumme de zichtboarheid an et vergroten. Zo wodden op 9 november [[2007]] in et centrum van Utrecht, vlak bi-j den [[Dom van Utrecht|Dom]] mit nen 80 centimeter breedn strook van gekleurd lech en naevel de plaatse van et olde castellum [[Traiectum]] an-egaeven.
 
 == Elders ==
-[[Ofbeelding:Bu_Njem.JPG|right|thumb|250px|Bu Njem; foto [http://www.livius.org Livius.Org].]]Den limes had oaveral ne andere uutstroaling. In [[Engelaand (olde könninkriek)|Engelaand]] bescharmden ne stenen mure de Romeinen teggen de [[Picten]]. Dizze mure besteet deels nog en wöd [[Mure van Hadrianus]] eneumd. De verstaerkingsliene deur et Odenwald en Zwarte Wold (den Germaans-Raetische limes) was doarenteggen van holt, al wodden et oosteleke deel later uut steen herbouwd. Lengs den Midden-Donau had de Romeinse rieksgrenze ne uutstroaling dat an den limes in de Laege Laanden dut denken. In [[Dacia]] slingerden de riege forten zich deur de [[Karpoaten]]. De woostiengrenze in Syrië en langs de Sahara ([[Limes Tripolitanus]]) hadden ne meer oppen uutstroaling.
+[[Ofbeelding:Roman fort Gholaia-Bu Njem, Libya.jpg|right|thumb|250px|Bu Njem; foto [http://www.livius.org Livius.Org].]]Den limes had oaveral ne andere uutstroaling. In [[Engelaand (olde könninkriek)|Engelaand]] bescharmden ne stenen mure de Romeinen teggen de [[Picten]]. Dizze mure besteet deels nog en wöd [[Mure van Hadrianus]] eneumd. De verstaerkingsliene deur et Odenwald en Zwarte Wold (den Germaans-Raetische limes) was doarenteggen van holt, al wodden et oosteleke deel later uut steen herbouwd. Lengs den Midden-Donau had de Romeinse rieksgrenze ne uutstroaling dat an den limes in de Laege Laanden dut denken. In [[Dacia]] slingerden de riege forten zich deur de [[Karpoaten]]. De woostiengrenze in Syrië en langs de Sahara ([[Limes Tripolitanus]]) hadden ne meer oppen uutstroaling.
 
 == Romeinse forten lengs den limes in Nederlaand ==
 Noord-weg (Olde-Rien-grenze) vanof de Duutsen grenze tot de Noordzee:
