*Empty MediaWiki Message*

--- a/Onderbanken.mw
+++ b/Onderbanken.mw
@@ -1,7 +1,7 @@
 {{Gemeante
 | naam = Onderbanken
-| bestaandsnaam vlagge = <!-- Onderbanken hef geen vlagge -->
-| bestaandsnaam woapn = Coat of arms of Onderbanken.png
+| bestaandsnaam vlagge = Onderbanken vlag.svg
+| bestaandsnaam woapn = Coat of arms of Onderbanken.svg
 | lokatie = LocatieOnderbanken
 | proveensie = [[Limburg (Nederlaand)|Limburg]]
 | heufdplaats = [[Schinveld]]
