*Empty MediaWiki Message*

--- a/Oostfreisk_Nederduutsk.mw
+++ b/Oostfreisk_Nederduutsk.mw
@@ -255,3 +255,4 @@ Dat Oostfreiske plat wordt einerzieds verbonden mit n sozioale statoes, ouver an
 
 [[Kategorie:Oostfreisk artikel]]
 [[Kategorie:Nedersaksies]]
+{{Incubator|Wp/frs|"up Oostfreeske Taal"}}
