*Empty MediaWiki Message*

--- a/Oostfreisk_Nederduutsk.mw
+++ b/Oostfreisk_Nederduutsk.mw
@@ -255,4 +255,4 @@ Dat Oostfreiske plat wordt einerzieds verbonden mit n sozioale statoes, ouver an
 
 [[Kategorie:Oostfreisk artikel]]
 [[Kategorie:Nedersaksies]]
-{{Incubator|Wp/frs}}
+{{Incubator|Wp/frs/}}
