--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -45,6 +45,11 @@ In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat e
 
 O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeerden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] bewäärden hee selv dat hee "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leaven van Brian O'Nolan dee den undersöker noch altyd uutdaagt."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
 
+===Ambtenårye===
+Een vöärnaam deyl van O'Nolans persöynlike ümstandigheyden was syn anseen as ambtenaar van et yrske ryk. Döärdat syn vader al vroo uut de tyd köäm, mus hee teen bröders en süsters in leyven holden, med inbegrip van een öldere bröder, den as nen skryver was sunder vöäle sukces. Yrland was in årmood dumpeld tüsken 1930 en 1960. Ne bane as ambtenår stünd dårümme hoog in anseen, want et bööd vast inkoamen in ne samenleyving dee noch grotendeyls van [[buren]] afhüng. De yrske ambtenårye hevt seet de [[yrske börgeroorlog]] altyd slim apolitik eweasd. Et was ambtenårenbeleid en dårnöäst ungebrukelik vöär rangen boaven 'kantoorklerk' üm politike seenswysen uut te spreaken. Dat bedüden vöär O'Nolan dat hee sunder toostemming van syne högeren nit in kranten mocht skryven. Dårümme köäm hee med een antal pseudonymen, ofskoons hee dat dårvöär ouk al wal es deyd. O'Nolan deyd et bysünder good. Hee wüs sik up te warken töt persöynlik sekretaris van [[Seán T. O'Kelly]] (doomåls minister en later President van Yrland) en [[Seán McEntee]], nen invloodryken figuur den as håste wal weaten müt hebben dat O'Nolan skreyv as Na gCopaleen<ref>Curran, Steve. 'Could Paddy Leave off from Copying Just for Five Minutes': Brian O'Nolan and Eire's Beveridge Plan. Irish University Review. vol 31, nr 2. 2001. p 353–375.</ref>
+
+Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen was. Syne kollega's kunden wal lachen üm syne skryvsels. De yrske ambtenårye sat in dee tyd reydelik intellektueel en liberaal in mekander. Van de andere kante mus O'Nolan et ouk nit te gek maken. As hee der politici te slim sul döärhalen, wör hee der achterhen edån. Dat geböärden ouk in [[1953]].<ref>[https://www.irishtimes.com/culture/books/the-fantastic-flann-o-brien-1.611390 O'Toole, Fintan. "The Fantastic Flann O'Brien." 1 October 2011. The Irish Times.] bekeaken up 2 oktober 2011.</ref> "Syn vöärt-an slimmer wördende superye en syne gewoonte üm nearbügende upmarkingen oaver höygere politici te maken in syne krantenkolumns leidden der too dat hee in 1953 uut de ambtenårye sat wörd.<ref>[https://www.irishtimes.com/opinion/an-irishman-s-diary-1.763600 McNally, Frank. "An Irishman's Diary". 14 mei 2009. The Irish Times.] Bekeaken up 21 October 2018</ref> (Hee güng, herinnert sik nen kollega, "in a final fanfare of f***s".<ref>Phelan, Michael. "A Watcher in the Wings: A Lingering Look at Myles na gCopaleen". Administration. Dublin, Institute of Public Administration of Ireland. Vol 24, nr 2. 1976. p 96–106.</ref>)
+
 ==Referensys==
 <references/>
 
