--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -261,11 +261,10 @@ t Bestuurliek zìntrum van de provìnzie is vaastegd in t historische provìnzie
 * [http://www.groningen.nl VVV Grunnen]
 * [http://www.rtvnoord.nl Regionoale radio- en tvomroup, mit fotos van Grunnen]
 
-{{dia|Schreven in t [[Oldambtsters]]}}
-
 {{GrunnegerOmmelanden}}
 {{GemaintesGrunnen}}
 {{NederlaandsePrevinsies}}
+{{Dialekt|gos|[[Oldambtsters|Oldambt]]}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnen| ]]
