*Empty MediaWiki Message*

--- a/Grolsch.mw
+++ b/Grolsch.mw
@@ -5,7 +5,7 @@ Op [[13 mei]] [[2000]] wodden de brouweri-j van Grolsch in [[Eanske]] zwoar besc
 
 Sinds 12 februari 2008 is Grolsch een zelfstandige dochterondernemming van SABMiller plc. oet [[Zuud-Afrika]]. In 2007 is Grolsch een ni'je weg in'eslagen met ut flessenbier. Eerst wodden de piepkes greun met een inhold van 33 cl in plaatse van broen met 30 cl. In 2008 wodden ok de beugelflessen gruun in plaatse van broen. De verandering van de kleur van de flessen hef niks te doon met de oavername deur SABMiller, moar was al langer de bedoeling. Grolsch hef al sinds de joaren '80 greun as bedriefskleur.
 
-{{Dia|Dit artikel is schreevn in t [[Grolle|Grols]], verbetteringn bint altied welkom.}}
+{{Dialekt|act|Grolle}}
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Bier]]
